appId: com.example.flutter_maestro_sample
---
- tapOn: "BUY"
- assertVisible:
    text: "400000"
- swipe:
    start: 15%,82%
    end: 91%,83%
- waitForAnimationToEnd
- assertVisible:
    text: ".*home page.*"